@@ -44,6 +44,7 @@ android {
 tasks.withType(Test).configureEach {
     jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
     jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
+    jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
     jvmArgs('--add-opens=java.base/java.util.concurrent=ALL-UNNAMED')
 }
 
